<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PAK</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="email">info@pambio.org</string>
    <string name="hello">Welcome to The Home of Peace Lovers</string>
    <string name="pambio">PEACE AMBASSADORS KENYA</string>
    <string name="projects">Our Projects</string>
    <string name="mission">Our Mission</string>
    <string name="history_title">Our History</string>
    <string name="partners">Our Partners</string>
    <string name="history">PAMBIO history</string>
    <string name="mission_desc">Mission description</string>
    <string name="vision">Our Vision</string>
    <string name="vision_desc">Vision description</string>
    <string name="core_value">Our Core Values</string>
    <string name="core_value_desc">Core values description</string>
    <string name="connect">Let\'s Connect </string>
    <string name="fb_desc">Facebook button</string>
    <string name="twitter_desc">Twitter button</string>
    <string name="ig_desc">Instagram button</string>
    <string name="chat">Group Chat</string>
    <string name="join">Join Us</string>
    <string name="donate">Donate</string>
    <string name="event_name">Event name</string>
    <string name="event_venue">Event venue</string>
    <string name="event_date">Event Date</string>
    <string name="event_desc">Event Description</string>
    <string name="event_time">Event Time</string>
    <string name="no_network">Check your internet connection!</string>
    <string name="no_network_tap">Tap to reload</string>
    <string name="info">Info desc</string>
    <string name="phone1">Phone1: </string>
    <string name="phone1_desc">0715542555</string>
    <string name="phone2">Phone2: </string>
    <string name="phone2_desc">071454555</string>
    <string name="email_head">Email: </string>
    <string name="address">Address: </string>
    <string name="address_desc">address</string>
    <string name="location">location: </string>
    <string name="contact_form">Contact Form</string>
    <string name="subject">subject</string>
    <string name="message">Type your message</string>
    <string name="send">send</string>
    <string name="title">Title</string>
    <string name="about">About</string>
    <string name="about_desc">About description</string>
    <string name="activities">Activities</string>
    <string name="activities_desc">Activities description</string>
    <string name="mobile_money">Donate Via Mobile Money</string>
    <string name="cheque">Donate Via Cheque</string>
    <string name="ac_name">Account Name:</string>
    <string name="ac_no">Account Number:</string>
    <string name="bank">Bank:</string>
    <string name="mobile_money_desc">Mobile Money Description</string>
    <string name="cheque_desc">Cheque Description</string>
    <string name="ac_name_desc">Account Name Description</string>
    <string name="ac_no_desc">Account Number Description</string>
    <string name="bank_desc">Bank Description</string>
    <string name="paypal">Donate Via Paypal</string>
    <string name="share">Share App</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate App</string>
    <string name="about_app">About App</string>
    <string name="update_prof">Edit Profile</string>
    <string name="usr_name">Username</string>
    <string name="update_btn">Update Info</string>
    <string name="version">App version:</string>
    <string name="version_name">version name</string>
    <string name="dev_email">codegreeddevelopers@gmail.com</string>
    <string name="contact_us">Contact Us: </string>
    <string name="mail">Email</string>
    <string name="check_update_desc">Click to check for updates</string>
    <string name="name_desc">Your username and profile picture will appear on the chat group so that other users can identify you easily.</string>


    <string name="server_error">Server unreachable!</string>
    <string name="google_android_map_api_key">AIzaSyDTIutk29iYfgxCRAUeYHqydf08duXTljo</string>

    //what we do drawer items
    <string name="we_do">What We Do</string>
    <string name="mentor">Mentor and Mentee</string>
    <string name="green_prt">Green print project</string>
    <string name="peace_edu">Peace education</string>
    <string name="peace_advo">Peace advocacy</string>
    <string name="health">Health outreach</string>
    <string name="life_skills">Life skills development</string>
    <string name="face_ps">My face for peace</string>

    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snackbar">Snackbar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>

    <string name="time">12:30</string>
    <string name="date">12 Oct,2017</string>
    <string name="sender_text">Sender message</string>
    <string name="sender_name">Sender</string>
    <string name="receiver_name">Receiver</string>
    <string name="receiver_text">Receiver message</string>
    <string name="me">Me</string>
    <string name="you">You</string>

</resources>
