<?xml version="1.0" encoding="utf-8"?>
<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/contact_us_layout"
    android:layout_width="match_parent"
    android:background="#dbdbdb"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
    <LinearLayout
        android:id="@+id/contact_us_items"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp"
        android:id="@+id/info_cardView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_black"
                android:layout_marginRight="6dp"
                android:layout_marginLeft="6dp"
                android:gravity="center"
                android:text="@string/info"
                android:layout_marginBottom="5dp"
                />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/contacts_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_phone"/>

        <TextView
            android:id="@+id/phone1_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="start"
            android:layout_marginRight="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="start"
            android:text="@string/phone1"
            android:textColor="@color/text_black" />
        <TextView
            android:id="@+id/phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="start"
            android:layout_marginRight="6dp"
            android:autoLink="phone"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:gravity="start"
            android:text="@string/phone1_desc"
             />
        <TextView
            android:id="@+id/phone2_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="end"
            android:layout_marginRight="95dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="95dp"
            android:gravity="start"
            android:text="@string/phone2"
            android:textColor="@color/text_black" />
        <TextView
            android:id="@+id/phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="end"
            android:autoLink="phone"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:gravity="end"
            android:text="@string/phone2_desc"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_mail"/>

        <TextView
            android:id="@+id/email_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="start"
            android:layout_marginRight="6dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="start"
            android:text="@string/email_head"
            android:textColor="@color/text_black" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="start"
            android:autoLink="email"
            android:layout_marginRight="6dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="83dp"
            android:layout_marginLeft="83dp"
            android:gravity="start"
            android:text="@string/fui_email_hint"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_address"/>

        <TextView
            android:id="@+id/address_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="start"
            android:layout_marginRight="6dp"
            android:layout_marginTop="89dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="start"
            android:text="@string/address"
            android:textColor="@color/text_black" />
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cardView"
            android:layout_gravity="start"
            android:autoLink="map"
            android:layout_marginRight="6dp"
            android:layout_marginTop="89dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="97dp"
            android:layout_marginLeft="97dp"
            android:gravity="start"
            android:text="@string/address_desc"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            tools:ignore="ContentDescription"
            android:src="@drawable/ic_location"/>

        <TextView
            android:id="@+id/location_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginRight="8dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:gravity="start"
            android:text="@string/location"
            android:textColor="@color/text_black" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="125dp"
            android:layout_marginLeft="103dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="103dp"
            android:paddingBottom="2dp"
            android:autoLink="map"
            android:gravity="start"
            android:text="@string/location" />


    </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/maps_cardView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:padding="5dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">


            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/email_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:padding="5dp"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">
            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/text_black"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/contact_form"
                 />
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <EditText
                android:lines="2"
                android:layout_width="match_parent"
                android:background="@drawable/chat_input"
                android:paddingStart="3dp"
                android:hint="@string/subject"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="3dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSubject"
                android:paddingRight="3dp"
                android:paddingLeft="3dp" />

            <EditText
                android:lines="4"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:hint="@string/message"
                android:paddingStart="3dp"
                android:paddingLeft="3dp"
                android:paddingEnd="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_width="match_parent"
                android:background="@drawable/chat_input"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextMessage" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:id="@+id/buttonSend"
                android:text="@string/send"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                 />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <FrameLayout
            android:id="@+id/no_network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginBottom="80dp"
            android:visibility="gone"
            >

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/network_error"
                tools:ignore="ContentDescription"
                />


            <TextView
                android:id="@+id/no_network_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:textColor="@color/text_black"
                android:text="@string/no_network"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:text="@string/no_network_tap"
                android:textSize="15sp" />

        </FrameLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/AVLoadingIndicatorView.Large"
        android:visibility="visible"
        app:indicatorName="BallClipRotateMultipleIndicator"
        app:indicatorColor="@color/colorAccent"
        />
</android.widget.FrameLayout>