<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/event_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="1dp"
        android:padding="5dp"
        app:cardCornerRadius="2dp"
        app:cardElevation="4dp">


            <TextView
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                android:text="@string/event_name"
                android:textColor="@color/text_heading"
                android:textSize="20sp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp" />
            <ImageView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date" />

            <TextView
                android:id="@+id/event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:layout_marginTop="35dp"
                android:textSize="15sp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="35dp"
                android:text="@string/event_date"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="8dp" />
        <ImageView
            android:layout_marginTop="65dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            />

        <TextView
            android:id="@+id/event_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:layout_marginTop="70dp"
            android:textSize="15sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="35dp"
            android:text="@string/event_venue"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="8dp" />
        <ImageView
            android:layout_marginTop="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"
            />

        <TextView
            android:id="@+id/event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:layout_marginTop="105dp"
            android:textSize="15sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="35dp"
            android:text="@string/event_time"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="8dp" />



    </android.support.v7.widget.CardView>

</LinearLayout>